"code clean up"